k8s/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myraid-flow-webapp-ingress
  labels:
    app: myraid-flow
    type: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    alb.ingress.kubernetes.io/group.name: lazarous-alb
spec:
  tls:
    - hosts:
        - demo.myriadflow.com
      secretName: demo.myriadflow.com
  rules:
    - host: demo.myriadflow.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: webapp-service
                port:
                  number: 3000
